Changed main title on navbar to fix spacing as well as edited css for page

--- a/docs/style.css
+++ b/docs/style.css
@@ -7,6 +7,10 @@ body {
     background-color: #252526;
 }
 
+.NavBarTitle {
+    font-size: 20pt;
+}
+
 .navbar .navbar-nav {
     display: inline-block;
     float: none;
@@ -16,3 +20,4 @@ body {
 .navbar .navbar-collapse {
     text-align: center;
 }
+
